--- a/caption.html
+++ b/caption.html
@@ -4,15 +4,18 @@
     <base href='./'>
     <meta charset="UTF-8">
     <title>&caption</title>
+    <script src="rendering/twemoji/twemoji.js"></script>
     <style>
         @font-face {
             font-family: caption;
             src: url(rendering/fonts/caption.otf);
         }
+
         /*@font-face {
             font-family: twemoji;
             src: url(rendering/fonts/twemoji.ttf);
         }*/
+
 
         * {
             margin: 0;
@@ -37,9 +40,16 @@
             padding: calc((100vw / 2) / 13);
         }
 
-        img {
+        .img {
             min-width: 100%;
             margin: 0;
+        }
+
+        img.emoji {
+            height: 1em;
+            width: 1em;
+            margin: 0 .05em 0 .1em;
+            vertical-align: -0.1em;
         }
 
         /*.caption span {
@@ -51,6 +61,7 @@
 </head>
 <body>
 <div class="caption"><span>CaptionText</span></div>
-<img src="rendering/demoimage.png" alt="An error has occurred loading your image.">
+<img class="img" src="rendering/demoimage.png" alt="An error has occurred loading your image.">
 </body>
+<script>twemoji.parse(document.body);</script>
 </html>
