fix bug where gifski has some maximum size thing idk

--- a/motivate.html
+++ b/motivate.html
@@ -28,6 +28,7 @@
             border: 3px solid white;
             padding: 5px;
             object-fit: fill;
+            min-width: initial;
             margin: 30px;
             margin-top: 0;
             margin-left: 0;
