--- a/motivate.html
+++ b/motivate.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>motivate</title>
     <script src="rendering/twemoji/twemoji.js"></script>
+
     <style>
         * {
             background: black;
@@ -25,33 +26,29 @@
         }
 
         .img {
-            border: 3px solid white;
-            padding: 5px;
+            border: 0.833vw solid white;
+            padding: 0.5vw;
             object-fit: fill;
             min-width: initial;
-            margin: 30px;
-            margin-top: 0;
-            margin-left: 0;
-            margin-right: 0;
+            margin-bottom: 2.5vw;
         }
 
         .wrap {
-            margin: 30px;
-            margin-bottom: 0;
+            margin: 5vw 5vw 0;
             display: inline-block;
         }
 
         .caption, .captionsmall {
             font-family: "Times New Roman", sans-serif;
             color: white;
-            font-size: 80px;
+            font-size: 13.3vw;
         }
 
         .captionsmall {
-            font-size: 40px;
+            font-size: 6.7vw;
             font-family: "Times New Roman", sans-serif;
             color: white;
-            margin-bottom: 20px;
+
         }
 
 
