moved rendering from PyQt (slow and stinky lol!) to selenium (fast when set up right)

--- a/motivate.html
+++ b/motivate.html
@@ -48,7 +48,7 @@
             font-size: 6.7vw;
             font-family: "Times New Roman", sans-serif;
             color: white;
-            margin-bottom: 20px;
+            /*margin-bottom: 20px;*/
 
         }
 
