--- a/twittercaption.html
+++ b/twittercaption.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <base href='./'>
     <meta charset="UTF-8">
     <title>motivate</title>
     <script src="rendering/twemoji/twemoji.js"></script>
@@ -54,4 +53,7 @@
 </div>
 </body>
 <script>twemoji.parse(document.body);</script>
+<script>
+
+</script>
 </html>
