--- a/twittercaption.html
+++ b/twittercaption.html
@@ -16,6 +16,7 @@
             background: white;
             text-align: left;
             margin: 0;
+            word-break: break-word;
         }
 
         img.emoji {
@@ -54,6 +55,17 @@
 </body>
 <script>twemoji.parse(document.body);</script>
 <script>
+function beforerender() {
+    document.querySelectorAll(".wrap")[0].style.margin = "2vw auto";
+}
 
+function outerHeight(element) {
+    const height = element.offsetHeight,
+        style = window.getComputedStyle(element)
+
+    return ['top', 'bottom']
+        .map(side => parseInt(style[`margin-${side}`]))
+        .reduce((total, side) => total + side, height)
+}
 </script>
 </html>
