--- a/mycaption.html
+++ b/mycaption.html
@@ -8,7 +8,8 @@
     <style>
         @font-face {
             font-family: caption;
-            src: url(rendering/fonts/caption.otf);
+            src: url(rendering/fonts/Lato-Bold.ttf);
+            /*    caption.otf is futura extra condensed bold but this file is just taken from esmbot's repo lol*/
         }
 
         /*@font-face {
@@ -38,8 +39,8 @@
             font-family: caption, /*twemoji,*/ sans-serif;
             text-align: center;
             word-wrap: break-word;
-            font-size: calc(100vw / 13 * (16 / 12));
-            padding: calc((100vw / 2) / 13);
+            font-size: 12vw;
+            padding: 3vw 1vw;
         }
 
         .img {
