--- a/twittercaption.html
+++ b/twittercaption.html
@@ -55,9 +55,10 @@
 </body>
 <script>twemoji.parse(document.body);</script>
 <script>
-function beforerender() {
-    document.querySelectorAll(".wrap")[0].style.margin = "2vw auto";
-}
+    // this doesnt work for some reason
+// function beforerender() {
+//     document.querySelectorAll(".wrap")[0].style.margin = "2vw auto";
+// }
 
 function outerHeight(element) {
     const height = element.offsetHeight,
