help command more betterer

--- a/mycaption.html
+++ b/mycaption.html
@@ -40,7 +40,7 @@
             text-align: center;
             word-wrap: break-word;
             font-size: 10vw;
-            padding: 3vw 1vw;
+            padding: 3vw;
         }
 
         .img {
