some bug fixes and $help aliases

--- a/motivate.html
+++ b/motivate.html
@@ -66,6 +66,7 @@
 
 function beforerender() {
     document.querySelectorAll(".wrap")[0].style.margin = "5vw auto";
+    document.querySelectorAll(".caption")[0].style.margin = "0 5vw";
 }
 
 function outerHeight(element) {
