twitcapdark and stuffstretch is fixed

--- a/twittercaptiondark.html
+++ b/twittercaptiondark.html
@@ -13,7 +13,7 @@
 
         body {
             font-size: 0;
-            background: white;
+            background: rgb(21, 32, 43);;
             text-align: left;
             margin: 0;
             word-break: break-word;
@@ -42,6 +42,7 @@
         .caption {
             font-family: helveticaneue, sans-serif;
             font-size: 8vw;
+            color:white;
         }
 
 
