--- a/stuffstretch.html
+++ b/stuffstretch.html
@@ -88,7 +88,6 @@
         }
         .stuff img {
             width: 100%;
-            height: 100%;
         }
     </style>
 </head>
@@ -99,10 +98,7 @@
 <div class="row">
 
     <div class="caption column"><span class="t">CaptionText</span></div>'
-    <div class="column stuff">
-        <img class="stuff" src="rendering/Stuff.PNG" alt="stuff"/>
-    </div>
-
+    <img class="stuff column" src="rendering/Stuff.PNG" alt="stuff"/>
 </div>
 
 </body>
