--- a/meme.html
+++ b/meme.html
@@ -37,6 +37,7 @@
             text-transform: uppercase;
             letter-spacing: 1px;
             /* https://codepen.io/MetalEscape/pen/WrYxVM */
+            /*TODO: make these values dependent on vw?*/
             text-shadow: 2px 2px 0 #000,
             -2px -2px 0 #000,
             2px -2px 0 #000,
