major cleanup and decluttering of root directory

--- a/captionhtml/twittercaptiondark.html
+++ b/captionhtml/twittercaptiondark.html
@@ -13,7 +13,7 @@
 
         body {
             font-size: 0;
-            background: white;
+            background: rgb(21, 32, 43);;
             text-align: left;
             margin: 0;
             word-break: break-word;
@@ -42,6 +42,7 @@
         .caption {
             font-family: helveticaneue, sans-serif;
             font-size: 8vw;
+            color:white;
         }
 
 
@@ -49,7 +50,7 @@
 </head>
 <body>
 <div class="wrap">
-    <div class="caption">CaptionText1</div>
+    <div class="caption">CaptionText</div>
     <img class=img src="rendering/demoimage.png" alt="An error has occurred loading your image.">
 </div>
 </body>
