--- a/captionhtml/meme.html
+++ b/captionhtml/meme.html
@@ -37,16 +37,15 @@
             text-transform: uppercase;
             letter-spacing: 1px;
             /* https://codepen.io/MetalEscape/pen/WrYxVM */
-            /*TODO: make these values dependent on vw?*/
-            text-shadow: 2px 2px 0 #000,
-            -2px -2px 0 #000,
-            2px -2px 0 #000,
-            -2px 2px 0 #000,
-            0 2px 0 #000,
-            2px 0 0 #000,
-            0 -2px 0 #000,
-            -2px 0 0 #000,
-            2px 2px 5px #000;
+            text-shadow: 0.6vw 0.6vw 0 #000,
+            -0.6vw -0.6vw 0 #000,
+            0.6vw -0.6vw 0 #000,
+            -0.6vw 0.6vw 0 #000,
+            0 0.6vw 0 #000,
+            0.6vw 0 0 #000,
+            0 -0.6vw 0 #000,
+            -0.6vw 0 0 #000,
+            0.6vw 0.6vw 1vw #000;
             left: 0;
             right: 0;
             position: absolute;
