fixed $donaldtweet font

--- a/captionhtml/dontweet.html
+++ b/captionhtml/dontweet.html
@@ -21,6 +21,11 @@
 
         /* custom font for icons, as html2canvas has issues with SVGs */
         @font-face {
+            font-family: "SF Pro Text";
+            src: url('rendering/SF-Pro-Text-Regular.otf');
+            font-weight: normal;
+        }
+        @font-face {
             font-family: "Tweetgen Icons";
             src: url('rendering/fonts/TweetgenIcons.woff');
         }
