--- a/captionhtml/motivate.html
+++ b/captionhtml/motivate.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>motivate</title>
+    <base href="../">
     <script src="rendering/twemoji/twemoji.js"></script>
 
     <style>
+        :root {
+            --1vw: 1vw;
+        }
         * {
             background: black;
         }
@@ -26,11 +30,11 @@
         }
 
         .img {
-            border: 0.833vw solid white;
-            padding: 0.5vw;
+            border: calc(0.833 * var(--1vw)) solid white;
+            padding: calc(0.5 * var(--1vw));
             object-fit: fill;
             min-width: initial;
-            margin-bottom: 2.5vw;
+            margin-bottom: calc(2.5 * var(--1vw));
         }
 
         .wrap {
@@ -41,11 +45,11 @@
         .caption, .captionsmall {
             font-family: "Times New Roman", sans-serif;
             color: white;
-            font-size: 13.3vw;
+            font-size: calc(13.3 * var(--1vw));
         }
 
         .captionsmall {
-            font-size: 6.7vw;
+            font-size: calc(6.7 * var(--1vw));
             font-family: "Times New Roman", sans-serif;
             color: white;
             /*margin-bottom: 20px;*/
@@ -57,16 +61,19 @@
 </head>
 <body>
 <div class="wrap">
-    <img class=img src="rendering/demoimage.png" alt="An error has occurred loading your image.">
+    <img class=img src="rendering/demoimage.png" alt="An error has occurred loading your image." id="img">
     <div class="caption">CaptionText1</div>
     <div class="captionsmall">CaptionText2</div>
 </div>
 </body>
-<script>twemoji.parse(document.body);
+<script>
+twemoji.parse(document.body);
 
+
+document.querySelector(':root').style.setProperty('--1vw', `${document.getElementById("img").scrollWidth/100}px`);
 function beforerender() {
-    document.querySelectorAll(".wrap")[0].style.margin = "5vw auto";
-    document.querySelectorAll(".caption")[0].style.margin = "0 5vw";
+    document.querySelectorAll(".wrap")[0].style.margin = "calc(5 * var(--1vw)) auto";
+    document.querySelectorAll(".caption")[0].style.margin = "0 calc(5 * var(--1vw))";
 }
 
 function outerHeight(element) {
