HOPEFULLY closes #10 and also removed .idea folder lol

--- a/captionhtml/motivate.html
+++ b/captionhtml/motivate.html
@@ -10,6 +10,7 @@
         :root {
             --1vw: 1vw;
         }
+
         * {
             background: black;
         }
@@ -38,7 +39,7 @@
         }
 
         .wrap {
-            margin: 5vw;
+            margin: calc(5 * var(--1vw));
             display: inline-block;
         }
 
@@ -67,22 +68,27 @@
 </div>
 </body>
 <script>
-twemoji.parse(document.body);
+    window.onload = function () {
+        document.querySelector(':root').style.setProperty('--1vw', `${document.getElementById("img").scrollWidth / 100}px`);
+// window.getComputedStyle(document.documentElement).getPropertyValue('--1vw');
+    }
+    // document.querySelector(':root').style.setProperty('--1vw', `${document.getElementById("img").scrollWidth/100}px`);
+    // window.getComputedStyle(document.documentElement).getPropertyValue('--1vw');
+    twemoji.parse(document.body);
 
+    function beforerender() {
+        // document.querySelector(':root').style.setProperty('--1vw', `${document.getElementById("img").scrollWidth/100}px`);
+        document.querySelectorAll(".wrap")[0].style.margin = "calc(5 * var(--1vw)) auto";
+        document.querySelectorAll(".caption")[0].style.margin = "0 calc(5 * var(--1vw))";
+    }
 
-document.querySelector(':root').style.setProperty('--1vw', `${document.getElementById("img").scrollWidth/100}px`);
-function beforerender() {
-    document.querySelectorAll(".wrap")[0].style.margin = "calc(5 * var(--1vw)) auto";
-    document.querySelectorAll(".caption")[0].style.margin = "0 calc(5 * var(--1vw))";
-}
+    function outerHeight(element) {
+        const height = element.offsetHeight,
+            style = window.getComputedStyle(element)
 
-function outerHeight(element) {
-    const height = element.offsetHeight,
-        style = window.getComputedStyle(element)
-
-    return ['top', 'bottom']
-        .map(side => parseInt(style[`margin-${side}`]))
-        .reduce((total, side) => total + side, height)
-}
+        return ['top', 'bottom']
+            .map(side => parseInt(style[`margin-${side}`]))
+            .reduce((total, side) => total + side, height)
+    }
 </script>
 </html>
