sacrifice vertical centering of text for wrapping around image

--- a/captionhtml/eminem.html
+++ b/captionhtml/eminem.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <title>&caption</title>
     <script src="rendering/twemoji/twemoji.js"></script>
-    <base href="../">
     <style>
         @font-face {
             font-family: caption;
@@ -32,21 +31,22 @@
         body {
             font-size: 0;
             word-break: break-word;
-            min-width: 1000px;
+
         }
 
         .caption {
             -webkit-font-smoothing: antialiased;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+            /*display: flex;*/
+            /*justify-content: center;*/
+            /*align-items: center;*/
             font-family: caption, /*twemoji,*/ sans-serif;
             text-align: center;
             word-wrap: break-word;
-            font-size: 9vw;
-            padding: 2vw 1vw;
-            width: 50%;
+            font-size: 6vw;
+            padding: 2vw 1vw 0;
+            width: 100%;
             min-height: 100%;
+            background: white;
         }
 
         .img {
@@ -61,32 +61,35 @@
             vertical-align: -0.1em;
         }
 
-        /*.caption span {
-            vertical-align: middle;
-        }*/
         * {
             box-sizing: border-box;
         }
 
         .column {
             float: left;
+
             /*padding: 10px;*/
         }
 
-        .row:after {
-            content: "";
-            display: table;
+        body:after, .clearfix:after {
+            visibility: hidden;
+            display: block;
+            font-size: 0;
+            content: " ";
             clear: both;
+            height: 0;
         }
 
-        .row {
-            background: white;
-            display: flex;
-            flex: 1;
+        .clearfix::before,
+        .clearfix::after {
+            flex-basis: 0;
+            order: 1;
         }
+
 
         .stuff {
             width: 50%;
+            float: right;
         }
 
         .stuff img {
@@ -96,20 +99,24 @@
 </head>
 <body>
 
-<div class="row">
-
-    <div class="caption column"><span class="t">CaptionText</span></div>
-    '
-    <div class="column stuff">
-        <img class="stuff" src="rendering/eminem.png" alt="stuff"/>
-    </div>
-
+<div class="caption clearfix" id="cap">
+    <img alt="stuff" class="stuff" src="rendering/eminem.png"/>
+    <span>CaptionText</span>
 </div>
 
 </body>
 <script>twemoji.parse(document.body);</script>
 <script>
 
+    // window.onresize = onresize
+    // document.addEventListener("DOMContentLoaded", onresize);
+    //
+    // function onresize() {
+    //     let elem = document.querySelector("#cap")
+    //     elem.style.lineHeight = window.getComputedStyle(elem).height
+    // }
+    //
+    // onresize();
 
     function outerHeight(element) {
         const height = element.offsetHeight,
@@ -118,17 +125,6 @@
         return ['top', 'bottom']
             .map(side => parseInt(style[`margin-${side}`]))
             .reduce((total, side) => total + side, height)
-    }
-
-    function fit(elemid) {
-        let elem = document.getElementById(elemid)
-        let elemc = elem.children[0]
-        while (outerHeight(elem) < outerHeight(elemc)) {
-            // https://stackoverflow.com/a/15195345/9044183
-            let style = window.getComputedStyle(elemc, null).getPropertyValue('font-size');
-            let fontSize = parseFloat(style);
-            elemc.style.fontSize = (fontSize - 1) + 'px';
-        }
     }
 </script>
 </html>
