--- a/captionhtml/eminemcap.html
+++ b/captionhtml/eminemcap.html
@@ -45,7 +45,7 @@
             font-size: 6vw;
             padding: 2vw 1vw 0;
             width: 100%;
-            min-height: 100%;
+            /*min-height: 100%;*/
             background: white;
         }
 
