--- a/captionhtml/stuff.html
+++ b/captionhtml/stuff.html
@@ -5,18 +5,12 @@
     <meta charset="UTF-8">
     <title>&caption</title>
     <script src="rendering/twemoji/twemoji.js"></script>
+    <base href="../">
     <style>
         @font-face {
             font-family: caption;
             src: url(rendering/fonts/Lato-Bold.ttf);
-            /*    caption.otf is futura extra condensed bold but this file is just taken from esmbot's repo lol*/
         }
-
-        /*@font-face {
-            font-family: twemoji;
-            src: url(rendering/fonts/twemoji.ttf);
-        }*/
-
 
         * {
             margin: 0;
@@ -26,30 +20,26 @@
             font-size: 100%;
             vertical-align: baseline;
             background: transparent;
+            box-sizing: border-box;
         }
 
         body {
             font-size: 0;
             word-break: break-word;
-
         }
 
         .caption {
             -webkit-font-smoothing: antialiased;
-            /*display: flex;*/
-            /*justify-content: center;*/
-            /*align-items: center;*/
             font-family: caption, /*twemoji,*/ sans-serif;
             text-align: center;
             word-wrap: break-word;
             font-size: 6vw;
             padding: 2vw 1vw 0;
             width: 100%;
-            /*min-height: 100%;*/
             background: white;
         }
 
-        .img {
+        .bigimg {
             min-width: 100%;
             margin: 0;
         }
@@ -59,16 +49,6 @@
             width: 1em;
             margin: 0 .05em 0 .1em;
             vertical-align: -0.1em;
-        }
-
-        * {
-            box-sizing: border-box;
-        }
-
-        .column {
-            float: left;
-
-            /*padding: 10px;*/
         }
 
         body:after, .clearfix:after {
@@ -89,37 +69,71 @@
 
         .stuff {
             width: 30%;
+        }
+
+        /* https://stackoverflow.com/a/68708084/9044183 */
+        .box {
+            width: 100%;
+        }
+
+        .img {
             float: right;
         }
 
-        .stuff img {
-            width: 100%;
+        .txt {
+            position: relative;
+            min-height: inherit;
+            padding: 0;
+            min-width: 70%;
+        }
+
+        .box-flex {
+            display: flex;
+            justify-content: space-between;
+        }
+
+        .box-flex .img {
+            order: 1;
+        }
+
+        .box-flex .txt {
+            padding: 0;
+            align-self: center;
+            min-height: auto;
         }
     </style>
 </head>
 <body>
 
+<img alt="An error has occurred loading your image." class="bigimg" src="rendering/demoimage.png">
 
-<img class="img" src="rendering/demoimage.png" alt="An error has occurred loading your image.">
-
-<div class="caption clearfix" id="cap">
-    <img alt="stuff" class="stuff" src="rendering/Stuff.PNG"/>
-    <span>CaptionText</span>
+<div class="box box-flex caption clearfix">
+    <img alt="stuff" class="stuff img" src="rendering/Stuff.PNG"/>
+    <div class="txt">CaptionText</div>
 </div>
 
 </body>
 <script>twemoji.parse(document.body);</script>
 <script>
+    function beforerender() {
+        document.querySelectorAll(".box").forEach((elem) => {
+            let img = elem.querySelector(".img");
+            let txt = elem.querySelector(".txt");
+            if (img.offsetHeight > txt.offsetHeight) {
+                elem.classList.add("box-flex")
+            } else {
+                elem.classList.remove("box-flex")
+            }
+        })
+    }
 
-    // window.onresize = onresize
-    // document.addEventListener("DOMContentLoaded", onresize);
-    //
-    // function onresize() {
-    //     let elem = document.querySelector("#cap")
-    //     elem.style.lineHeight = window.getComputedStyle(elem).height
-    // }
-    //
-    // onresize();
+    window.onresize = beforerender;
+    document.addEventListener('DOMContentLoaded', beforerender);
+    // https://stackoverflow.com/a/60949881/9044183
+    Promise.all(Array.from(document.images).filter(img => !img.complete).map(img => new Promise(resolve => {
+        img.onload = img.onerror = resolve;
+    }))).then(beforerender);
+
 
     function outerHeight(element) {
         const height = element.offsetHeight,
