--- a/captionhtml/imagesaycap.html
+++ b/captionhtml/imagesaycap.html
@@ -103,11 +103,9 @@
     </style>
 </head>
 <body>
-
 <img alt="An error has occurred loading your image." class="bigimg" src="rendering/demoimage.png">
-
 <div class="box box-flex caption clearfix">
-    <img alt="stuff" class="stuff img" src="rendering/eminem.png"/>
+    <img alt="stuff" class="stuff img" src="rendering/demoimage2.png"/>
     <div class="txt">CaptionText</div>
 </div>
 
