--- a/captionhtml/imagesaycapleft.html
+++ b/captionhtml/imagesaycapleft.html
@@ -26,7 +26,6 @@
         body {
             font-size: 0;
             word-break: break-word;
-            min-width: 1000px;
         }
 
         .caption {
@@ -35,7 +34,6 @@
             text-align: center;
             word-wrap: break-word;
             font-size: 6vw;
-            padding: 2vw 1vw 0;
             width: 100%;
             background: white;
         }
@@ -69,7 +67,7 @@
 
 
         .stuff {
-            width: 50%;
+            width: 30%;
         }
 
         /* https://stackoverflow.com/a/68708084/9044183 */
@@ -78,14 +76,14 @@
         }
 
         .img {
-            float: right;
+            float: left;
         }
 
         .txt {
             position: relative;
             min-height: inherit;
             padding: 0;
-            min-width: 50%;
+            min-width: 70%;
         }
 
         .box-flex {
@@ -94,7 +92,7 @@
         }
 
         .box-flex .img {
-            order: 1;
+            order: 0;
         }
 
         .box-flex .txt {
@@ -105,9 +103,9 @@
     </style>
 </head>
 <body>
-
+<img alt="An error has occurred loading your image." class="bigimg" src="rendering/demoimage.png">
 <div class="box box-flex caption clearfix">
-    <img alt="stuff" class="stuff img" src="rendering/eminem.png"/>
+    <img alt="stuff" class="stuff img" src="rendering/demoimage2.png"/>
     <div class="txt">CaptionText</div>
 </div>
 
